# kobo-highlights

./: README.md  example_config.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
kobo_highlights/: config.py  config.toml  console.py  functions.py  main.py
tests/: references.py  test_config.py  test_functions.py  test_kobo_highlights.py
