[tool.poetry]
name = "kobo-highlights"
version = "0.1.0"
description = ""
authors = ["Pedro Videgain Barranco"]

[tool.poetry.scripts]
kh = "kobo_highlights.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.4.1"}
toml = "^0.10.2"
pydantic = "^1.9.0"
rich = "^12.2.0"
marko = "^1.2.1"
beautifulsoup4 = "^4.11.1"
markdownify = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
